--- a/src/components/dialogs/dialog/dialog.scss
+++ b/src/components/dialogs/dialog/dialog.scss
@@ -15,8 +15,8 @@
   user-select: none;
 
   &--right {
-    justify-content: flex-end;
-    align-items: flex-start;
+    justify-content: end;
+    align-items: start;
     --dialog-padding: 0;
   }
 
