--- a/src/components/slots/bar/bar.scss
+++ b/src/components/slots/bar/bar.scss
@@ -59,6 +59,7 @@
     }
     .bar__right {
       flex: 1;
+      justify-content: end;
     }
   }
 }
